src/test/resources/typeSystemTestModels/invalid/classes/NonAbstractClassImplementsAllAbstractMethods.java
package typeSystemTestModels.invalid.classes;

public class ClassImplementsAllAbstractMethods extends ClassCanOnlyExtendClass {


}